Fix python for scala 2.13 migration