@@ -20,6 +20,19 @@ object Common {
     scalaVersion := "2.13.16",
     javacOptions ++= Seq("-source", "17", "-target", "17"),
     scalacOptions ++= Seq("-unchecked", "-deprecation", "-feature", "-release", "17"),
+    Test / fork := true,
+    javaOptions ++= Seq(
+      "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    ),
+    Test / javaOptions ++= Seq(
+      "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    ),
     ThisBuild / libraryDependencySchemes +=
       "org.scala-lang.modules" %% "scala-collection-compat" % VersionScheme.Always,
     resolvers += Resolver.mavenLocal,
